chore: removal of Bed and Room related caisi dead code; further Program permissions work may be needed.  Resolved deprecated warnings for test compile.