@@ -255,7 +255,7 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
             + " order by d.LastName,d.FirstName";
 
         String status = "AC"; // only show active clients
-        List rs = getHibernateTemplate().find(q, new Object[]{status, new Integer(programId), dt, dt, defdt});
+        List rs = getHibernateTemplate().find(q, new Object[]{status, Integer.valueOf(programId), dt, dt, defdt});
 
         List clients = new ArrayList<Demographic>();
         Integer clientNo = 0;
@@ -1852,7 +1852,6 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
         String lastName = "";
         String firstNameL = "";
         String lastNameL = "";
-        String bedProgramId = "";
         String assignedToProviderNo = "";
 
         String active = "";
@@ -1939,12 +1938,6 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
             criteria.add(Expression.eq("Ver", bean.getHealthCardVersion()));
         }
 
-        if (bean.getBedProgramId() != null && bean.getBedProgramId().length() > 0) {
-            bedProgramId = bean.getBedProgramId();
-            sql = " demographic_no in (select decode(dm.merged_to,null,i.client_id,dm.merged_to) from intake i,demographic_merged dm where i.client_id=dm.demographic_no(+) and i.program_id in ("
-                + bedProgramId + "))";
-            criteria.add(Restrictions.sqlRestriction(sql));
-        }
         if (bean.getAssignedToProviderNo() != null && bean.getAssignedToProviderNo().length() > 0) {
             assignedToProviderNo = bean.getAssignedToProviderNo();
             sql = " demographic_no in (select decode(dm.merged_to,null,a.client_id,dm.merged_to) from admission a,demographic_merged dm where a.client_id=dm.demographic_no(+)and a.primaryWorker='"
@@ -1954,9 +1947,9 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
 
         active = bean.getActive();
         if ("1".equals(active)) {
-            criteria.add(Expression.ge("activeCount", new Integer(1)));
+            criteria.add(Expression.ge("activeCount", Integer.valueOf(1)));
         } else if ("0".equals(active)) {
-            criteria.add(Expression.eq("activeCount", new Integer(0)));
+            criteria.add(Expression.eq("activeCount", Integer.valueOf(0)));
         }
 
         gender = bean.getGender();
@@ -2118,7 +2111,7 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
             }
 
             if (pIdi.length > 0) {
-                subq.add(Restrictions.in("programId", pIdi));
+                subq.add(Restrictions.in("programId", (Object[]) pIdi));
             }
 
             if (bean.getDateFrom() != null && bean.getDateFrom().length() > 0) {
@@ -2393,7 +2386,7 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
 
         @SuppressWarnings("unchecked")
         List<Demographic> demographics = (List<Demographic>) this.getHibernateTemplate().find(sql,
-            params.toArray(new String[params.size()]));
+            (Object[]) params.toArray(new String[params.size()]));
 
         if (!demographics.isEmpty()) {
             return demographics.get(0);
@@ -2434,7 +2427,7 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
             params.add(date_of_birth);
         }
 
-        return (List<Demographic>) this.getHibernateTemplate().find(sql, params.toArray(new String[params.size()]));
+        return (List<Demographic>) this.getHibernateTemplate().find(sql, (Object[]) params.toArray(new String[params.size()]));
     }
 
     @SuppressWarnings("unchecked")
@@ -2460,7 +2453,7 @@ public class DemographicDaoImpl extends HibernateDaoSupport implements Applicati
             params.add(date_of_birth);
         }
 
-        return (List<Demographic>) this.getHibernateTemplate().find(sql, params.toArray(new String[params.size()]));
+        return (List<Demographic>) this.getHibernateTemplate().find(sql, (Object[]) params.toArray(new String[params.size()]));
     }
 
     @SuppressWarnings("unchecked")
